test lasso east river

--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
     <h2 id="time"> if testing, make sure logging on to localhost:8000 </h2>
   <div id="gameDiv"></div>
   <button id="bananaBtn">cupcake</button>
-  <button id="zoomInBtn">Zoom+</button>
   <button id="zoomOutBtn">Zoom-</button>
+  <button id="zoomInBtn">Zoom+</button>
+  <button id="lassoBtn">Lasso</button>
 
   </body>
 </html>
