--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
   <br>
   <button id="lassoBtn">Lasso</button>
   <button id="gpsBtn">get GPS</button>
+  <button id="bgMusicBtn">music</button>
   <p id="latlong"></p>
+  <p>Music in the background from https://www.fesliyanstudios.com</p>
 
   </body>
 </html>
