--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   </head>
   <body>
-  <br><br>
+  <p id ="score"> </p>
   <div id="gameDiv"></div>
   <button id="bananaBtn">cupcake</button>
   <button id="zoomOutBtn">Zoom-</button>
@@ -37,7 +37,7 @@
   <button id="gpsBtn">get GPS</button>
   <button id="bgMusicBtn">music</button>
   <p id="latlong"></p>
-  <p>Music in the background from https://www.fesliyanstudios.com</p>
+  <p>Background music: https://www.fesliyanstudios.com</p>
 
   </body>
 </html>
