--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@
     
     <script src="coordTransformations.js"></script>
     <script src="objectTypes.js"></script>
+    <script src="gameworld_classes/Mummy.js"></script>
+    <script src="gameworld_classes/Player.js"></script>
+
+    <script src="gameSounds.js"></script>
     <script src="gameLoopAndUpdateStateFunctions.js"></script>
     <script src="gameworldGenerationFunctions.js"></script>
     <script src="parkmummies_setup_script.js"></script>
-    <script src="gameSounds.js"></script>
     <script src="globalVars.js"></script> <!-- globalVar should be loaded after setup_script -->
      <!-- headupdisplay should be loaded after setup_script -->
     <script src="userInput.js"></script> <!-- userInput should be loaded after setup_script -->
